Support lazy loading and use synchronized rather than readwrite locks