@@ -1,5 +1,6 @@
 package edu.stanford.bmir.protege.web.server.index.impl;
 
+import com.google.common.collect.ImmutableList;
 import edu.stanford.bmir.protege.web.server.change.AddAxiomChange;
 import org.junit.Before;
 import org.junit.Test;
@@ -45,7 +46,7 @@ public class DisjointClassesAxiomsIndexImpl_TestCase {
         when(axiom.getClassExpressions())
                 .thenReturn(Collections.singleton(cls));
         impl = new DisjointClassesAxiomsIndexImpl();
-        impl.applyChanges(List.of(AddAxiomChange.of(ontologyID, axiom)));
+        impl.applyChanges(ImmutableList.of(AddAxiomChange.of(ontologyID, axiom)));
     }
 
     @Test
