@@ -1,5 +1,6 @@
 package edu.stanford.bmir.protege.web.server.index.impl;
 
+import com.google.common.collect.ImmutableList;
 import edu.stanford.bmir.protege.web.server.change.AddAxiomChange;
 import org.junit.Before;
 import org.junit.Test;
@@ -44,7 +45,7 @@ public class SubClassOfAxiomsBySubClassIndexImpl_TestCase {
         cls = Class(mock(IRI.class));
         axiom = SubClassOf(cls, superCls);
         impl = new SubClassOfAxiomsBySubClassIndexImpl();
-        impl.applyChanges(List.of(AddAxiomChange.of(ontologyID, axiom)));
+        impl.applyChanges(ImmutableList.of(AddAxiomChange.of(ontologyID, axiom)));
     }
 
     @Test
